[project]
name = "legend-in-the-mist-app"
version = "0.1.0"
description = "Python app to run Legend in the Mist mechanics, game by Son of Oak"
readme = "README.md"
authors = [{ name = "leoturoff", email = "leo.turoff@icloud.com" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.12.5"]

[project.scripts]
litm = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/server"]
include = ["*.py"]
